--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .page {
-  background-image: url('../public/background.PNG');
+  background-image: url('/background.PNG');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
